feat: handle UserAlreadyExistsException in GlobalExceptionHandler, add message to sign-up.html

--- a/src/main/webapp/WEB-INF/views/sign-up.html
+++ b/src/main/webapp/WEB-INF/views/sign-up.html
@@ -23,6 +23,10 @@
                  th:text="${passwordsMatchError}">
                 Passwords match error
             </div>
+            <div class="alert alert-danger" role="alert" th:if="${userAlreadyExistsMessage}"
+                 th:text="${userAlreadyExistsMessage}">
+                User already exists error
+            </div>
         </div>
     </div>
 
