--- a/src/main/webapp/WEB-INF/views/sign-up.html
+++ b/src/main/webapp/WEB-INF/views/sign-up.html
@@ -32,9 +32,10 @@
 
     <div class="row justify-content-center">
         <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-            <form th:method="POST" th:action="@{/register}" th:object="${registrationData}" class="mt-4">
+            <form th:method="POST" th:action="@{/sign-up}" th:object="${registrationData}" class="mt-4">
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
+
                     <div class="input-group has-validation">
                         <input type="text"
                                th:class="${#fields.hasErrors('login')} ? 'form-control is-invalid' : 'form-control'"
@@ -74,13 +75,13 @@
                                th:field="*{repeatPassword}"/>
                         <div class="invalid-feedback" th:if="${#fields.hasErrors('repeatPassword')}"
                              th:errors="*{repeatPassword}">
-                            Repeat Password error
+                            RepeatPassword error
                         </div>
                     </div>
                 </div>
 
                 <button type="submit" class="btn btn-primary w-100 mt-3">Sign Up</button>
-                <p class="mt-2 text-center">Already have an account? <a href="#">Sign in here</a></p>
+                <p class="mt-2 text-center">Already have an account? <a th:href="@{/sign-in}">Sign in here</a></p>
             </form>
         </div>
     </div>
