--- a/src/main/webapp/WEB-INF/views/search-results.html
+++ b/src/main/webapp/WEB-INF/views/search-results.html
@@ -59,9 +59,16 @@
                             <p class="card-text mb-1">Latitude: <span th:text="${location.latitude}"></span></p>
                             <p class="card-text mb-1">Longitude: <span th:text="${location.longitude}"></span></p>
                             <p class="card-text mb-1">Country: <span th:text="${location.country}"></span></p>
-                            <p class="card-text mb-3">State: <span th:text="${location.state}"></span></p>
+                            <p class="card-text mb-3" th:if="${location.state}">State: <span th:text="${location.state}"></span></p>
                             <div class="mt-auto">
-                                <button class="btn btn-primary w-100">Add</button>
+                                <form th:action="@{/search-results}" method="post">
+                                    <input type="hidden" name="name" th:value="${location.name}">
+                                    <input type="hidden" name="latitude" th:value="${location.latitude}">
+                                    <input type="hidden" name="longitude" th:value="${location.longitude}">
+                                    <input type="hidden" name="country" th:value="${location.country}">
+                                    <input type="hidden" name="state" th:value="${location.state}">
+                                    <button type="submit" class="btn btn-primary w-100">Add</button>
+                                </form>
                             </div>
                         </div>
                     </div>
